feat [PRIV-64]: Implement put /manage-actions /manage-triggers and update openAPI documentation
